dev/test_programs/INVALID/group1/funcdec4.go
package main;

func test (a){}
